--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -20,14 +20,14 @@ html, body {
     height: 100%;
 }
 
-/* nav {
+.nav {
     position: fixed;
     width:100%;
     height: 100px;
     background-color: rgba(140, 127, 114, 0.5);
     z-index: 100;
     text-align: center;
-} */
+} 
 
 .photo {
     height: 100%;
@@ -84,20 +84,23 @@ html, body {
    margin-top: 1em;
 }
 
-
-
 /*HEADER CSS*/
-.header-container, .logo-container, .menu-dropdown, option{
+.header-container, .logo-container, .menu-dropdown, option, .tip-container, .back-to-top-middle-area{
     background-color: #595959;
 }
 
-.menu-container, .tip-bar, .form-button, .back-to-top-button, .search-criteria, .search-button, .language-button {
+.menu-container, .tip-bar, .form-button, .back-to-top-button, .search-criteria, .search-button, .language-button  {
     background-color: #404040;
 }
 
-.menu-line, .navigation-container:hover{    
-    background-color:#808080;
+.menu-line, .navigation-container:hover, .search-info-container, .copy-event-btn:hover, .ticket-event-btn:hover, .no-event{    
+    background-color: #808080;
 }
+
+.event-photo-container, .event-map-container,.event-description-container, .copy-event-btn, .ticket-event-btn {
+    background-color: #FFF;
+}
+
 
 .header-container {
     height:90px;
@@ -235,7 +238,6 @@ html, body {
     width: 300px;
     height: 310px;
     border: 1px solid #000;
-    background-color: #595959;
     color: #FFF;    
     transition: bottom linear 0.7s;
     z-index: 55;
@@ -253,7 +255,7 @@ html, body {
     line-height: 30px;
     cursor: pointer;    
     color: #FFF;
-    
+
 }
 
 #tip-form {
@@ -290,6 +292,7 @@ html, body {
     bottom: 20px;
     right: 20px;
     z-index: 5;
+
     width: 5%;
     height: 9.5%;
     border-radius: 100%;
@@ -311,7 +314,6 @@ html, body {
 .back-to-top-middle-area {
     width:85%;
     height: 85%;
-    background-color: #595959;
     margin: auto;
     border-radius: 100%;
     position: relative;
@@ -334,20 +336,23 @@ html, body {
 }
 
 .search-box {
-    position: relative;
     max-width: 100%;
-    width: 1000px;    
+    width: 800px;    
     min-width: 800px;
     height: 25%;
     margin: auto;
+    position: relative;
     top: 30%;
+}
+
+.search-form {
+    height: 100%;
 }
 
 .search-criteria {
     height: 100%;
-    width: 20%;
+    width: 22.5%;
     margin-left: 2.5%;
-    cursor: pointer;
     box-shadow: 2px 2px 5px 1px #000;
     border: none;
 }
@@ -355,29 +360,51 @@ html, body {
 .search-criteria, .search-button {
     color: white;
     text-align: center;
-    line-height: 2.5em;
     font-family: sans-serif;
     font-size: 1.5em;
     float: left;
+    cursor: pointer;
 }
 
 .search-button {
     position: relative;
     width:17.5%;
     top: 9%;
-    margin-left: 2.5%;
+    margin-left:5%;
     height: 80%;
+    line-height: 2em;
     box-shadow: 2px 2px 5px 1px #000;
+    border-style: none;
+}
+
+.search-info-container {
+    width: 900px;
+    height: 80%;
+    position: relative;
+    margin: auto;
+    top: 10%;
+    box-shadow: 3px 3px 10px 1px #000;   
+
+}
+
+.search-info-header {
+    text-align: center;
+    color: #FFF;
+    position: relative;
+    top:25%;
+    font-family: sans-serif;
+    font-size: 2em;
 }
 /*SEARCH CSS ENDS*/
 
+
+/*LANGUAGE BUTTON CSS STARTS*/
 .language-container {
     position: absolute;
     right: 0;
     width: 150px;
     height: 100%;
 }
-<<<<<<< HEAD
 
 .language-button {
     height: 50%;
@@ -393,44 +420,111 @@ html, body {
     line-height: 2.5em;
 }
 
-.eventsidecontainer1 {
-                  position: absolute;
-                  top: 45%;
-                  left: 14%;
-                  width: 13%;
-                  height: 20%;
-                  background-image: url(../Bilder/bjorn.jpeg);
-                  overflow: hidden;
-                  box-shadow: 0px 5px 20px 0px #000;
-          }
+/*LANGUAGE BUTTON CSS ENDS*/
 
+/*EVENT-CALENDAR CSS STARTS*/
 
-.eventsidecontainer2 {
-                  position: absolute;
-                  top: 45%;
-                  left: 42%;
-                  width: 30%;
-                  height: 20%;
-              
-                  box-shadow: 0px 5px 20px 0px #000;
-          }
-
-.eventsidecontainer3 {
-                  position: absolute;
-                  top: 45%;
-                  left: 73%;
-                  width: 13%;
-                  height: 20%;
-
-                  box-shadow: 0px 5px 20px 0px #000;
+.event-container {
+    width: 100%;
+    margin-top: 2.5%;
 }
 
-        
-#eventsidemap {
-                  position: absolute;
-                  top: 45%;
-                  left: 28%;
-                  width: 13%;
-                  height: 20%;
-                  box-shadow: 0px 5px 20px 0px #000;
+.event-inner-container {
+    width: 1300px;
+    height: 200px;
+    margin: auto 0 5% 0;
+    position: relative;
+    top: 10%;
 }
+
+.event-photo-container, .event-map-container,.event-description-container {
+    float: left;
+    height: 100%;
+    width: 20%;
+    box-shadow: 0px 5px 20px 0px #000;
+}
+
+.event-map-container{
+    margin-left: 2.5%;
+}
+
+.event-description-container {
+    width: 40%;
+    margin-left: 2.5%;
+    overflow:scroll;
+    overflow-x: hidden;
+}
+
+.event-social-container {
+    width: 12.5%;
+    margin-left: 2.5%;    
+    float: left;
+    height: 100%;
+}
+
+.event-background {
+    height: 100%;
+    width: 1300px;
+    margin: auto;
+    border-radius: 1%;
+    padding: 2.5%;
+    box-shadow: 0px 5px 20px 0px #000;
+    background-color: rgba(50,50,50,0.2);
+}
+.event-photo {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.event-description-title, .event-description-text {
+    width:80%;
+    margin: auto;
+    text-align: center;
+}
+
+.event-description-title {
+    height: 15%;
+    padding: 2.5% 0 2.5% 0;
+}
+
+.copy-event-btn, .ticket-event-btn {
+    width: 100%;
+    height: 20%;
+    box-shadow: 0px 5px 20px 0px #000;
+    margin: auto;
+    text-decoration: none;
+    color: #000;
+    margin-top: 20%;
+}
+
+.copy-event-btn p, .ticket-event-btn p{
+    width: 75%;
+    height: 100%;
+    margin-top: 7.5%;
+}
+
+.copy-event-btn *, .ticket-event-btn *{
+    float: left;
+}
+
+.event-btn-img {
+    max-height: 100%;
+    width:25%;
+}
+
+.no-event {
+    width: 1300px;
+    height: 125px;
+    margin: auto 0 5% 0;
+    position: relative;
+    top: 10%;
+    box-shadow: 0px 5px 20px 0px #000;
+    text-align: center;
+}
+
+.no-event-text {
+    color: #FFF;
+    font-size: 2em;
+    line-height: 3.1em;
+}
+
